--- a/Stealth777/Modules/WALLET/View/WalletStoryboard.storyboard
+++ b/Stealth777/Modules/WALLET/View/WalletStoryboard.storyboard
@@ -35,16 +35,19 @@
                                             <constraint firstAttribute="width" secondItem="zBS-XH-s4m" secondAttribute="height" multiplier="1:1" id="MG2-w9-7cB"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxd-HY-Z5f" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="65" y="20" width="76.666666666666686" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account 1" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxd-HY-Z5f" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
+                                        <rect key="frame" x="65" y="20" width="202" height="20"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                         <color key="textColor" name="textFieldColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lightGrayForwardIcon" translatesAutoresizingMaskIntoConstraints="NO" id="STt-iN-DuF">
-                                        <rect key="frame" x="277.66666666666669" y="22.666666666666657" width="8.3333333333333144" height="14.666666666666664"/>
+                                        <rect key="frame" x="271" y="22.666666666666657" width="15" height="14.666666666666664"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" name="lightForwardIconTintColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="15" id="Fqo-cm-fSF"/>
+                                        </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="accountIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Xk3-gv-HPy">
                                         <rect key="frame" x="24" y="19" width="22" height="22"/>
@@ -56,6 +59,7 @@
                                     <constraint firstItem="Xk3-gv-HPy" firstAttribute="centerY" secondItem="zBS-XH-s4m" secondAttribute="centerY" id="3ry-bG-d3c"/>
                                     <constraint firstItem="pxd-HY-Z5f" firstAttribute="centerY" secondItem="zBS-XH-s4m" secondAttribute="centerY" id="DU9-lM-Ag2"/>
                                     <constraint firstItem="zBS-XH-s4m" firstAttribute="leading" secondItem="OTA-9h-iTV" secondAttribute="leading" constant="15" id="DyV-kv-qpQ"/>
+                                    <constraint firstItem="STt-iN-DuF" firstAttribute="leading" secondItem="pxd-HY-Z5f" secondAttribute="trailing" constant="4" id="GuF-Y8-77H"/>
                                     <constraint firstItem="zBS-XH-s4m" firstAttribute="top" secondItem="OTA-9h-iTV" secondAttribute="top" constant="10" id="HD7-VN-Qyp"/>
                                     <constraint firstAttribute="height" constant="60" id="Huj-Qh-vFY"/>
                                     <constraint firstItem="pxd-HY-Z5f" firstAttribute="leading" secondItem="zBS-XH-s4m" secondAttribute="trailing" constant="10" id="IvE-7Q-u0J"/>
@@ -79,7 +83,7 @@
                                 <rect key="frame" x="90" y="216" width="308" height="60"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Account Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KrQ-sc-ySW" customClass="UITextFieldCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="273" height="60"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" name="textFieldColor"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
@@ -89,6 +93,9 @@
                                                 <color key="value" name="textFieldPlaceholderColor"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="pJ5-x3-euZ" id="rRw-aV-Td0"/>
+                                        </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="38L-n2-Oyq">
                                         <rect key="frame" x="0.0" y="59" width="308" height="1"/>
@@ -101,7 +108,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EXu-Sf-CP8" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="279" y="15" width="28" height="30"/>
+                                        <rect key="frame" x="275" y="15" width="32" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="32" id="zRU-V0-NcA"/>
+                                        </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="QRIcon"/>
                                     </button>
@@ -113,6 +123,7 @@
                                     <constraint firstItem="KrQ-sc-ySW" firstAttribute="top" secondItem="Z8c-a1-aeT" secondAttribute="top" id="9lC-d7-rnb"/>
                                     <constraint firstAttribute="trailing" secondItem="EXu-Sf-CP8" secondAttribute="trailing" constant="1" id="Dhq-wi-zel"/>
                                     <constraint firstAttribute="bottom" secondItem="38L-n2-Oyq" secondAttribute="bottom" id="EQ3-9x-1KP"/>
+                                    <constraint firstItem="EXu-Sf-CP8" firstAttribute="leading" secondItem="KrQ-sc-ySW" secondAttribute="trailing" constant="2" id="aNO-5Q-dGg"/>
                                     <constraint firstItem="EXu-Sf-CP8" firstAttribute="centerY" secondItem="Z8c-a1-aeT" secondAttribute="centerY" id="e8E-8l-jaU"/>
                                     <constraint firstAttribute="trailing" secondItem="38L-n2-Oyq" secondAttribute="trailing" id="m3S-qF-i7R"/>
                                     <constraint firstAttribute="bottom" secondItem="KrQ-sc-ySW" secondAttribute="bottom" id="tor-As-Tng"/>
@@ -179,6 +190,9 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <connections>
+                        <outlet property="accountAddressLbl" destination="pxd-HY-Z5f" id="IrD-co-WkO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UXd-VK-8Ga" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -212,9 +226,12 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lightGrayForwardIcon" translatesAutoresizingMaskIntoConstraints="NO" id="zdR-Ts-bQW">
-                                        <rect key="frame" x="337.66666666666669" y="22.666666666666657" width="8.3333333333333144" height="14.666666666666664"/>
+                                        <rect key="frame" x="331" y="22.666666666666657" width="15" height="14.666666666666664"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" name="lightForwardIconTintColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="15" id="NNY-7y-H7P"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" name="CustomViewBgColor"/>
